# cam

./: .gitignore  CMakeLists.txt  Makefile  README.md  cam.cpp  cam.h  cam.qrc  camera.cpp  camera.h  camview.cpp  camview.h  camview.ui  main.cpp  mjpeg.cpp  mjpeg.h  mjpeg.json  v4l2.cpp  v4l2.h
